--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -12,6 +12,13 @@
         <input name="username" id="username" required>
         <label for="password">Mot de passe</label>
         <input type="password" name="password" id="password" required>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required>
+        <label for="name">Prénom</label>
+        <input type="name" name="name" id="name" required>
+        <label for="last_name">Nom</label>
+        <input type="last_name" name="last_name" id="last_name">
+        
         <input type="submit" value="S'enregistrer">
       </form>
     
