ajout d'un font personnalisé

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -50,7 +50,7 @@
 */
 @font-face {
   font-family: LexendDeca;
-  src: url(LexendDeca.ttf);
+  src: url(C:\Flask_app_TM_2425\Lexend_Deca\LexendDeca-Black.ttf);
   font-variant: small-caps;
   font-weight: 500;
 }
