--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -9,7 +9,7 @@
     {% if g.user %}
       <h1>Vous êtes connectés</h1>
     {% else %}
-      <h1>Bienvenue sur le template de base de votre TM :)</h1>
+      <h1>UniteArts</h1>
     {% endif %}
   </div>
 {% endblock %}
