--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,17 +7,19 @@
 {% block content %}
   <div class="content-register">
     <div>
+      <div class="column">
       <form method="post">
-        <label for="username">Nom d'utilisateur</label>
-        <input name="username" id="username" required>
-        <label for="password">Mot de passe</label>
-        <input type="password" name="password" id="password" required>
-        <input type="submit" value="Se connecter">
+        <div class="item"><label for="username">Nom d'utilisateur</label></div>
+        <div class="item"><input name="username" id="username" required></div>
+        <div class="item"><label for="password">Mot de passe</label></div>
+        <div class="item"><input type="password" name="password" id="password" required></div>
+        <div class="item"><input type="submit" value="Se connecter"></div>
       </form>
+      </div>
 
       {% for message in get_flashed_messages() %}
         <div>{{ message }}</div>
       {% endfor %}
     </div>
-  </div>
+  </div>  
 {% endblock %}
