--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,15 +5,16 @@
 {% endblock %}
 
 {% block content %}
+<h1>Connectez-vous</h1>
   <div class="content-register">
-    <div>
-      <div class="column">
+    
+    <div class="block">
+      <div class="column" >
       <form method="post">
-        <div class="item"><label for="username">Nom d'utilisateur</label></div>
-        <div class="item"><input name="username" id="username" required></div>
-        <div class="item"><label for="password">Mot de passe</label></div>
-        <div class="item"><input type="password" name="password" id="password" required></div>
-        <div class="item"><input type="submit" value="Se connecter"></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required></div>
+        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password"  required></div>
+        <a href="{{ url_for('auth.reset')}}" class="small_link">Mot de passe oublié?</a>
+        <div><input type="submit" value="Poursuivre" style="padding-right: 210px; padding-left: 210px;"></div>
       </form>
       </div>
 
@@ -21,5 +22,5 @@
         <div>{{ message }}</div>
       {% endfor %}
     </div>
-  </div>  
+  </div>                                   
 {% endblock %}
