--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,23 +5,21 @@
 {% endblock %}
 
 {% block content %}
-  <div class="content-register">
-    <div>
+  <h1>S'inscrire</h1>  
+  <div class="content-register" style="margin-top: 100px;">
+    <div class="block">
+      <div class="column center">
       <form method="post">
-        <label for="username">Nom d'utilisateur</label>
-        <input name="username" id="username" required>
-        <label for="password">Mot de passe</label>
-        <input type="password" name="password" id="password" required>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
-        <label for="name">Prénom</label>
-        <input type="name" name="name" id="name" required>
-        <label for="last_name">Nom</label>
-        <input type="last_name" name="last_name" id="last_name">
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required></div>
+        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password" required></div>
+        <div style="margin-bottom: 20px;"><input type="email" placeholder="Email" name="email" id="email" required></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Prénom" name="name" id="name" required></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom" name="last_name" id="last_name"></div>
 
-        <input type="submit" value="S'enregistrer">
+        <div><input type="submit" value="Poursuivre"></div>
       </form>
-    
+      </div>
+
       {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
       {% endfor %}
