--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -10,13 +10,13 @@
     <div class="block">
       <div class="column center">
       <form method="post">
-        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required></div>
-        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password" required></div>
-        <div style="margin-bottom: 20px;"><input type="email" placeholder="Email" name="email" id="email" required></div>
-        <div style="margin-bottom: 20px;"><input type="text" placeholder="Prénom" name="name" id="name" required></div>
-        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom" name="last_name" id="last_name"></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required class="connection-textbox"></div>
+        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password" required class="connection-textbox"></div>
+        <div style="margin-bottom: 20px;"><input type="email" placeholder="Email" name="email" id="email" required class="connection-textbox"></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Prénom" name="name" id="name" required class="connection-textbox"></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom" name="last_name" id="last_name" class="connection-textbox"></div>
 
-        <div><input type="submit" value="Poursuivre"></div>
+        <div><input type="submit" value="Poursuivre" style="padding-right: 210px; padding-left: 210px;"></div>
       </form>
       </div>
 
