--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -26,7 +26,12 @@
                 </div>
             </div>
             <div id="shape2" class="content-margin">
-
+                <div>
+                    <div class="center between round">
+                        <input type="text" placeholder="Nom">
+                        <input type="text" placeholder="Prénom">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
