--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,8 +11,8 @@
     <div class="block">
       <div class="column" >
       <form method="post">
-        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required></div>
-        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password"  required></div>
+        <div style="margin-bottom: 20px;"><input type="text" placeholder="Nom d'utilisateur" name="username" id="username" required class="connection-textbox"></div>
+        <div style="margin-bottom: 20px;"><input type="password" placeholder="Mot de passe" name="password" id="password"  required class="connection-textbox"></div>
         <a href="{{ url_for('auth.reset')}}" class="small_link">Mot de passe oublié?</a>
         <div><input type="submit" value="Poursuivre" style="padding-right: 210px; padding-left: 210px;"></div>
       </form>
