--- a/app/templates/auth/password_reset.html
+++ b/app/templates/auth/password_reset.html
@@ -11,10 +11,11 @@
     
     <div class="block">
         <div class="column">
-            <h4 style="width: 500px; margin-top: -30px; margin-bottom: 50px;">Veuillez saisir votre adresse email afin de recevoir le lien de réinitialisation de votre mot de passe</h4>
+            <h4 style="width: 475px; margin-top: -30px; margin-bottom: 50px;">Veuillez créer un nouveau mot de passe.</h4>
         <form method="post">
-        <div style="margin-bottom: 20px;"><input type="text" placeholder="email@exemple.com" name="email" id="email" required class="connection-textbox"></div>
-        <div ><a href="{{url_for('auth.password_reset')}}"><input type="submit" value="Confirmer" style="padding-right: 220px; padding-left: 220px;"></a></div>
+          <div style="margin-bottom: 20px;"><input type="password" placeholder="Nouveau mot de passe" name="password" id="password" required class="connection-textbox"></div>
+          <div style="margin-bottom: 20px;"><input type="password" placeholder="Confirmer mot de passe" name="password" id="password" required class="connection-textbox"></div>
+        <div ><a href="{{url_for('auth.password_reset')}}"><input type="submit" value="Confirmer" style="padding-right: 210px; padding-left: 210px;"></a></div>
         </form>
         </div>
 
