--- a/app/templates/auth/reset.html
+++ b/app/templates/auth/reset.html
@@ -11,10 +11,10 @@
     
     <div class="block">
         <div class="column">
-            <h4 style="width: 500px; margin-top: -30px; margin-bottom: 50px;">Veuillez saisir votre adresse email afin de recevoir le lien de réinitialisation de votre mot de passe</h4>
+            <h4 style="width: 475px; margin-top: -30px; margin-bottom: 50px;">Veuillez saisir votre adresse email afin de recevoir le lien de réinitialisation de votre mot de passe</h4>
         <form method="post">
         <div style="margin-bottom: 20px;"><input type="text" placeholder="email@exemple.com" name="email" id="email" required class="connection-textbox"></div>
-        <div ><a href="{{url_for('auth.password_reset')}}"><input type="submit" value="Envoyer" style="padding-right: 220px; padding-left: 220px;"></a></div>
+        <div ><a href="{{url_for('auth.password_reset')}}"><input type="button" value="Envoyer" style="padding-right: 217px; padding-left: 217px;"></a></div>
         </form>
         </div>
 
