--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="center">
     <a href="{{url_for('auth.create')}}">
-      <input type="button" value="Créer un projet">
+      <input type="button" value="Créer un projet" class="create-button">
     </a>
   </div>
   <div class="hmpg">
