complété la mise en page de la page qui permet l'utilisateur d'éditer des choses sur son compte et se déconnecter. supprimé le "footer"

--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -26,11 +26,17 @@
                 </div>
             </div>
             <div id="shape2" class="content-margin">
-                <div>
-                    <div class="center between round">
-                        <input type="text" placeholder="Nom">
-                        <input type="text" placeholder="Prénom">
-                    </div>
+                <div class="around">
+                    <input type="text" placeholder="nom" class="box-black">
+                    <input type="text" placeholder="prénom" class="box-black">
+                </div>
+                <div class="center column">
+                    <input type="text" placeholder="nom d'utilisateur" class="box-black-big">
+                    <input type="text" placeholder="style d'art préféré" class="box-black-big">
+                    <div class="lineblk"></div>
+                    <input type="text" placeholder="moi en une phrase" class="box-black-big blk-bx-margin">
+                    <input type="text" placeholder="description" class="box-black-huge blk-bx-margin">
+                    <input type="submit" value="Sauvegarder">
                 </div>
             </div>
         </div>
