--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -79,6 +79,11 @@
   justify-content: end;
 }
 
+.around{
+  display: flex;
+  justify-content: space-around;
+}
+
 .round{
   border-radius: 50%;
 }
@@ -87,6 +92,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+
 
 h1 {
   display: flex;
@@ -301,8 +308,6 @@ a[href=emailcode]:hover{
     text-align: center;
 }
 
-
-
 .title{
   display: block;
 }
@@ -358,4 +363,72 @@ a[href=emailcode]:hover{
 
 .wide{
   width: 1350px;
+}
+
+.box-black{
+  display: flex;
+  justify-content: space-around;
+  background: transparent;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px 73px 5px 10px;
+  margin: 30px 2% 4px 2%;
+  border-radius: 10px;
+}
+
+.box-black-big{
+  display: flex;  
+  justify-content: space-around;
+  color: black;
+  background: transparent;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px 70px 5px 10px;
+  margin: 6px 2% 4px 2%;
+  border-radius: 10px;
+}
+
+.box-black-huge{
+  display: flex;  
+  justify-content: space-around;
+  color: black;
+  background: transparent;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px 70px 300px 10px;
+  margin: 5px 2% 2% 2%;
+  border-radius: 10px;
+}
+
+.blk-bx-margin{
+  margin: 15px 12px 15px 12px;
+}
+.lineblk {
+  border-top: 1px solid black;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+input[value="Sauvegarder"]{
+  background-image: linear-gradient(to right, #FF1058 , #CE1A1A);
+  color: white;
+  border: none;
+  padding: 1% 10%;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 30px;
+  transition: .5s;
+}
+
+input[value="Sauvegarder"]:hover{
+  background-image: linear-gradient(to right, white, white);
+  color: #EF1344;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
 }
