--- a/app/templates/artists/people.html
+++ b/app/templates/artists/people.html
@@ -5,5 +5,53 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Artistes</h2>
+  <h2>Artistes</h2>
+  <div class="column">
+    <div class="row around">
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+    </div>
+    <div class="row around" style="margin-top: 2%;">
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+      <div class="column artist-work">
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <h1>nom d'utilisateur</h1>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+    </div>
+  </div>
 {% endblock %}
