--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -40,7 +40,7 @@
               adwad
               <p>dawdad</p>
             </div>
-            <img src="/static/imgs/ex.jpg" alt="exemple">
+            <img src="/static/imgs/ex.jpg" alt="exemple" class="profile_proj">
             date du projet
           </div>
 
