Mise en page 90% complète de la page "créer un projet"

--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -27,8 +27,8 @@
             </div>
             <div id="shape2" class="content-margin">
                 <div class="around">
-                    <input type="text" placeholder="nom" class="box-black">
-                    <input type="text" placeholder="prénom" class="box-black">
+                    <input style="float: left;" type="text" placeholder="nom" class="box-black">
+                    <input style="float: right;" type="text" placeholder="prénom" class="box-black">
                 </div>
                 <div class="center column">
                     <input type="text" placeholder="nom d'utilisateur" class="box-black-big">
