--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -123,6 +123,13 @@ h4 {
   font-weight: 500;
 }
 
+h5 {
+  color: black;
+  margin: 10px;
+  font-weight: 700;
+  font-size: 20px;
+}
+
 hr.line {
   border-top: 1px solid white;
   margin-left: 10%;
@@ -138,6 +145,10 @@ hr.line2 {
 header{
     height: 10%;
     font-size: x-large;
+}
+
+#header-nav-icon{
+  display: none;
 }
 
 #header-nav{
@@ -289,7 +300,7 @@ a[href=emailcode]:hover{
   size: 200px;
 }
 #shape1 {
-  width: 400px;
+  width: 30%;
   height: 700px;
   background-color: rgba(255, 255, 255, .75);
   border: none;
@@ -334,8 +345,8 @@ a[href=emailcode]:hover{
   display: flex;
   flex-direction: column;
   margin-top: 2.5%;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 1%;
+  margin-left: 1%;
 }
 
 .content-profile-title{
@@ -366,7 +377,7 @@ a[href=emailcode]:hover{
 
 
 .wide{
-  width: 1350px;
+  width: 80%;
 }
 
 .box-black{
@@ -376,8 +387,8 @@ a[href=emailcode]:hover{
   border-color: black;
   border-style: solid;
   border-width: 1px;
-  padding: 5px 73px 5px 10px;
-  margin: 30px 2% 4px 2%;
+  padding: 5px 11.99% 5px 10px;
+  margin-top: 30px;
   border-radius: 10px;
 }
 
@@ -389,7 +400,7 @@ a[href=emailcode]:hover{
   border-color: black;
   border-style: solid;
   border-width: 1px;
-  padding: 5px 70px 5px 10px;
+  padding: 5px 60% 5px 10px;
   margin: 6px 2% 4px 2%;
   border-radius: 10px;
 }
@@ -438,11 +449,50 @@ input[value="Sauvegarder"]:hover{
 }
 
 .artist_pfp{
-  height: 50px;
-  width: 50px;
+  height: 10%;
+  width: 10%;
+  margin-bottom: 1%; 
+  margin-right: 1%;
 }
 
 .artist-work{
   height: 31%;
   width: 31%;
+  float: left;
 }
+
+#squaregray{
+  
+  display: flex;
+  justify-content:center;
+  height: 1300px;
+  width: 1500px;
+  background-color: rgba(255, 255, 255, .75);
+  border: none;
+  border-radius: 10px;
+}
+
+#squarewhite{
+  height: 1000px;
+  width: 1000px;
+  background-color: rgba(255, 255, 255);
+  border-style: solid ;
+  border-color: black;
+  border-width: 1px;
+  margin: auto;
+}
+
+.a{
+  font-size: 75px;
+  margin-left: 50px;
+  width: 400px;
+}
+
+#rectangleC{
+  height: 1075px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, .75);
+  border: none;
+  border-radius: 10px;
+}
+
