--- a/app/templates/artists/people.html
+++ b/app/templates/artists/people.html
@@ -11,21 +11,21 @@
       <div class="column artist-work">
         <div class="row start">
           <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
+          <p style="margin-top: auto;">nom d'utilisateur</p>
         </div>
         <img src="/static/imgs/ex.jpg">
       </div>
       <div class="column artist-work">
         <div class="row start">
           <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
+          <p style="margin-top: auto;">nom d'utilisateur</p>
         </div>
         <img src="/static/imgs/ex.jpg">
       </div>
       <div class="column artist-work">
         <div class="row start">
           <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
+          <p style="margin-top: auto;">nom d'utilisateur</p>
         </div>
         <img src="/static/imgs/ex.jpg">
       </div>
@@ -34,21 +34,21 @@
       <div class="column artist-work">
         <div class="row start">
           <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
+          <p style="margin-top: auto;">nom d'utilisateur</p>
+        </div>
+        <img src="/static/imgs/ex.jpg">
+      </div>
+      <div class="column artist-work" >
+        <div class="row start">
+          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+          <p style="margin-top: auto;">nom d'utilisateur</p>
         </div>
         <img src="/static/imgs/ex.jpg">
       </div>
       <div class="column artist-work">
         <div class="row start">
           <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <h1>nom d'utilisateur</h1>
+          <p style="margin-top: auto;">nom d'utilisateur</p>
         </div>
         <img src="/static/imgs/ex.jpg">
       </div>
