--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -5,5 +5,49 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Créer un projet</h2>
+  <div class="row">
+    <div id="squaregray">
+      <div id="squarewhite"></div>
+    </div>
+    <div style="margin-right: 20px;">
+      <p><h2 class="a">Créer un projet</h2>
+      <div id="rectangleC">
+        <input type="text" placeholder="Nom du projet" class="box-black">
+        <div class="lineblk"></div>
+        <h5>Description du projet</h5>
+        <input type="text" placeholder="Thème, style" class="box-black">
+        <div class="lineblk"></div>
+          <div class="row">
+            <h5 style="width: 200px;">Nombre de participants :</h5>
+            <div>
+              <input type="number" min=1 max=5 class="box-black-big center" style="margin-top: 20px;">
+            </div>
+          </div>
+        <div class="lineblk"></div>
+        <h5 style="width: 190px;">Délai pour envoyer le projet :</h5>
+        <input type="date" class="box-black">
+        <div class="lineblk"></div>
+        <h5>Format :</h5>
+        <select class="block-black">
+          <option>libre</option>
+          <option>1:1</option>
+          <option>2:3</option>
+          <option>3:4</option>
+          <option>4:5</option>
+          <option>9:16</option>
+          
+        </select> 
+        <div class="row">
+            <h5>x :</h5>
+            <h5>y :</h5>
+        </div>
+        <div class="lineblk"></div>
+        <div class="row">
+          <div class="column">
+            <h5>couleur de l'arrière-plan :</h5>  
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
