--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -18,7 +18,7 @@
     {% endif %}
   </div>
   <div class="center">
-    <a href="{{url_for('auth.create')}}">
+    <a href="{{ url_for('create.createproject') }}">
       <input type="button" value="Créer un projet" class="create-button">
     </a>
   </div>
