--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -20,7 +20,7 @@
           <div class="row">
             <h5 style="width: 200px;">Nombre de participants :</h5>
             <div>
-              <input type="number" min=1 max=5 class="box-black-big center" style="margin-top: 20px;">
+              <input type="number" min=1 max=5 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
             </div>
           </div>
         <div class="lineblk"></div>
@@ -28,24 +28,22 @@
         <input type="date" class="box-black">
         <div class="lineblk"></div>
         <h5>Format :</h5>
-        <select class="block-black">
-          <option>libre</option>
-          <option>1:1</option>
-          <option>2:3</option>
-          <option>3:4</option>
-          <option>4:5</option>
-          <option>9:16</option>
-        </select>  
-        <div class="row around">
-            <div class="row" style="height: 35px; margin-bottom: 10px;">
-              <h5 style="margin: auto;">x : </h5>
-              <input type="text" class="box-black" style="width: 150px; margin-top: 5px; margin-left: 10px;">
-            </div>
-            <div class="row" style="height: 35px;">
-              <h5 style="margin: auto;">y :</h5>
-              <input type="text" class="box-black" style="width: 150px; margin-top: 5px; margin-left: 10px;">
-            </div>
-        </div>
+
+        <select id="aspectRatio">
+          <option value="" disabled selected>Libre, 1:1, 2:3, ...</option>
+          <option value="libre">libre</option>
+          <option value="1:1">1:1</option>
+          <option value="2:3">2:3</option>
+          <option value="3:4">3:4</option>
+          <option value="4:5">4:5</option>
+          <option value="9:16">9:16</option>
+        </select>
+        <div id="dynamicContent"></div>
+        
+
+<div id="dynamicContent"></div>
+
+
         <div class="lineblk"></div>
         <div class="row">     
           <div class="column">
@@ -53,9 +51,41 @@
             <input type="text" class="box-black"> 
           </div>
           <div id="square"></div>
-        </div>
-        <input type="submit" value="Confirmer" class="center">
+        </div> 
+        <input type="submit" value="Confirmer" class="center"><a href=""></a>
       </div>
     </div>
   </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const aspectRatioSelect = document.getElementById('aspectRatio');
+    const dynamicContent = document.getElementById('dynamicContent');
+
+    function updateContent() {
+      const selectedValue = aspectRatioSelect.value;
+
+      if (selectedValue === "libre") {
+        // Dynamically render the "libre" content
+        dynamicContent.innerHTML = `
+          <div class="row around">
+              <div class="row" style="height: 35px; margin-bottom: 10px;">
+                <h5 style="margin: auto;">x : </h5>
+                <input type="number" min=1 max=3000 class="box-black" style="width: 150px; margin-top: 5px; margin-left: 10px;">
+              </div>
+              <div class="row" style="height: 35px;">
+                <h5 style="margin: auto;">y :</h5>
+                <input type="number" min=1 max=3000 class="box-black" style="width: 150px; margin-top: 5px; margin-left: 10px;">
+              </div>
+            </div>
+        `;
+      } else {
+        dynamicContent.innerHTML = "";
+      }
+    } 
+    updateContent();
+
+    aspectRatioSelect.addEventListener('change', updateContent);
+  });
+</script>
 {% endblock %}
