--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -52,7 +52,9 @@
           </div>
           <div id="square"></div>
         </div> 
-        <input type="submit" value="Confirmer" class="center"><a href=""></a>
+        <button onclick="{{ url_for('create.send')}}" class="center button">
+          Confirmer
+        </button>
       </div>
     </div>
   </div>
