--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Profil
+  Éditer mon profil
 {% endblock %}
 
 {% block content %}
@@ -36,7 +36,7 @@
                     <div class="lineblk"></div>
                     <input type="text" placeholder="moi en une phrase" class="box-black-big blk-bx-margin">
                     <input type="text" placeholder="description" class="box-black-huge blk-bx-margin">
-                    <input type="submit" value="Sauvegarder">
+                    <input type="submit" value="Sauvegarder" class="button">
                 </div>
             </div>
         </div>
