--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -52,7 +52,7 @@
           </div>
           <div id="square"></div>
         </div> 
-        <button onclick="{{ url_for('create.send')}}" class="center button">
+        <button onclick="location.href='{{ url_for('create.send')}}'" class="center button">
           Confirmer
         </button>
       </div>
