--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -5,8 +5,26 @@ Envoyer l'email
 {% endblock %}
 
 {% block content %}
-<div class="block" style=" padding-right: 20%;">
+<div class="block" style=" width: 40%;">
     <h5 class="center" style="font-size: 200%; font-weight: 400; padding-left: 10%a;"> Envoyer à :</h5>
-    <input type="email" class="box-black-big">
+    <input type="email" class="box-black-big center" style="margin: auto;">
+    <div class="lineblk" style="margin-left: 20%; margin-right: 20%;"></div>
+    <h5 class="center">Titre</h5>
+    <div class="row">
+        <div class="box-black-huge column" style="width: 50%;">
+            <h5 style="text-decoration: underline;">Description</h5>
+            <h5 style="opacity: 0.5;">Thème, style</h5>
+        </div>
+        <div class="column">
+            <h5>Format :</h5>
+            <h5>Participants :</h5>
+            <h5>Delai :</h5>
+            <h5>Couleur de l'arrière-plan :</h5>
+        </div>
+    </div>
+    <button onclick="location.href='{{ url_for('projects.projects') }}';" class="center button">
+        Confirmer et envoyer
+    </button>
+    <a href="{{ url_for('create.createproject')}}" style="text-decoration: none;"><h5 class="center" style="opacity: .5;">retour</h5></a>
 </div>
 {% endblock %}
