ajout d'une fonction qui change la forme du cadre selon le fromat choisi

--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -22,7 +22,7 @@ Envoyer l'email
             <h5>Couleur de l'arrière-plan :</h5>
         </div>
     </div>
-    <button onclick="location.href='{{ url_for('projects.projects') }}';" class="center button">
+    <button onclick="location.href='{{ url_for('projects.projects') }}'" class="center button">
         Confirmer et envoyer
     </button>
     <a href="{{ url_for('create.createproject')}}" style="text-decoration: none;"><h5 class="center" style="opacity: .5;">retour</h5></a>
