--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -481,14 +481,15 @@ a[href=emailcode]:hover{
   border-radius: 10px;
 }
 
-#squarewhite{
-  height: 1000px;
-  width: 1000px;
+.shapeY{
+  width: 100%;
+  height: 100%;
   background-color: rgba(255, 255, 255);
   border-style: solid ;
   border-color: black;
   border-width: 1px;
   margin: auto;
+  margin-top: 20%;
 }
 
 .a{
