--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -7,7 +7,9 @@
 {% block content %}
   <div class="row">
     <div id="squaregray">
-      <div id="squarewhite"></div>
+      
+<div id="shapeX"></div>
+
     </div>
     <div style="margin-right: 20px;">
       <p><h2 class="a">Créer un projet</h2>
@@ -20,7 +22,7 @@
           <div class="row">
             <h5 style="width: 200px;">Nombre de participants :</h5>
             <div>
-              <input type="number" min=1 max=5 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
+              <input type="number" min=1 max=3 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
             </div>
           </div>
         <div class="lineblk"></div>
@@ -63,12 +65,17 @@
   document.addEventListener('DOMContentLoaded', () => {
     const aspectRatioSelect = document.getElementById('aspectRatio');
     const dynamicContent = document.getElementById('dynamicContent');
+    const shapeX = document.getElementById('shapeX');
 
     function updateContent() {
       const selectedValue = aspectRatioSelect.value;
 
+      if (selectedValue !== "libre") {
+        dynamicContent.innerHTML = "";
+        
+      }
+
       if (selectedValue === "libre") {
-        // Dynamically render the "libre" content
         dynamicContent.innerHTML = `
           <div class="row around">
               <div class="row" style="height: 35px; margin-bottom: 10px;">
@@ -81,12 +88,39 @@
               </div>
             </div>
         `;
-      } else {
-        dynamicContent.innerHTML = "";
+        shapeX.innerHTML = `
+        <h2 style="margin: auto;">Format libre</h2>
+        `;
       }
+      
+      if (selectedValue === "1:1") {
+          shapeX.innerHTML = ` 
+          <div class="shapeY" style="width: 800px; height: 800px;"></div>
+          `;
+        }
+        if (selectedValue === "2:3") {
+          shapeX.innerHTML = ` 
+          <div class="shapeY" style="width: 600px; height: 900px;"></div>
+          `;
+        }
+        if (selectedValue === "3:4") {
+          shapeX.innerHTML = ` 
+          <div class="shapeY" style="width: 600px; height: 800px;"></div>
+          `;
+        }
+        if (selectedValue === "4:5") {
+          shapeX.innerHTML = ` 
+          <div class="shapeY" style="width: 640px; height: 800px;"></div>
+          `;
+        }
+        if (selectedValue === "9:16") {
+          shapeX.innerHTML = ` 
+          <div class="shapeY" style="width: 450px; height: 800px;"></div>
+          `;
+        }
     } 
     updateContent();
-
+    
     aspectRatioSelect.addEventListener('change', updateContent);
   });
 </script>
