--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -220,7 +220,7 @@ footer{
     transition: 1.5s;
 }
 
-input[type=button], input[type=submit]{
+input[type=button], input[value="Poursuivre"], input[value="Confirmer"]{
   background-color: #FED33B;
   color: black;
   font-weight: 700;
@@ -481,12 +481,12 @@ a[href=emailcode]:hover{
   border-radius: 10px;
 }
 
-.shapeY{
+#shapeY{
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255);
   border-style: solid ;
-  border-color: black;
+  border-color: black;  
   border-width: 1px;
   margin: auto;
   margin-top: 20%;
