--- a/app/templates/auth/password_reset.html
+++ b/app/templates/auth/password_reset.html
@@ -15,7 +15,7 @@
         <form method="post">
           <div style="margin-bottom: 20px;"><input type="password" placeholder="Nouveau mot de passe" name="password" id="password" required class="connection-textbox"></div>
           <div style="margin-bottom: 20px;"><input type="password" placeholder="Confirmer mot de passe" name="password" id="password" required class="connection-textbox"></div>
-        <div ><a href="{{url_for('auth.password_reset')}}"><input type="submit" value="Confirmer" style="padding-right: 210px; padding-left: 210px;"></a></div>
+        <div ><a href="{{url_for('auth.password_reset')}}"><input type="submit" value="Poursuivre" style="padding-right: 210px; padding-left: 210px;"></a></div>
         </form>
         </div>
 
