--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -14,20 +14,20 @@
     <div style="margin-right: 20px;">
       <p><h2 class="a">Créer un projet</h2>
       <div id="rectangleC" style="padding-top: 20px;">
-        <input type="text" placeholder="Nom du projet" maxlength="25" class="box-black">
+        <input type="text" placeholder="Nom du projet" id="name" maxlength="25" class="box-black">
         <div class="lineblk"></div>
         <h5>Description du projet</h5>
-        <input type="text" placeholder="Thème, style" class="box-black">
+        <input type="text" placeholder="Thème, style" id="description" class="box-black">
         <div class="lineblk"></div>
           <div class="row">
             <h5 style="width: 200px;">Nombre de participants :</h5>
             <div>
-              <input type="number" min=1 max=3 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
+              <input type="number" id="no_participants" min=1 max=3 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
             </div>
           </div>
         <div class="lineblk"></div>
         <h5 style="width: 190px;">Délai pour envoyer le projet :</h5>
-        <input type="date" class="box-black">
+        <input type="date" id="deadline" class="box-black">
         <div class="lineblk"></div>
         <h5>Format :</h5>
 
@@ -54,9 +54,10 @@
           </div>
           <div id="square"></div>
         </div> 
-        <button onclick="location.href='{{ url_for('create.send')}}'" class="center button">
-          Confirmer
-        </button>
+        <div class="center"><input type="submit" value="Confirmer" class="button"></div>
+        {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+      {% endfor %}
       </div>
     </div>
   </div>
