tentative pour ajouter le tableau "many to many" entre "users" et "galleries"

--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -19,7 +19,9 @@ Envoyer l'email
             <h5>Format : </h5>
             <h5>Participants :</h5>
             <h5>Delai :</h5>
-            <h5>Couleur de l'arrière-plan :</h5>
+            <h5>Couleur de l'arrière-plan :
+                <span></span>
+            </h5>
         </div>
     </div>
     <button onclick="location.href='{{ url_for('projects.projects') }}'" class="center button">
