--- a/app/templates/create/createproject.html
+++ b/app/templates/create/createproject.html
@@ -15,20 +15,20 @@
       <p><h2 class="a">Créer un projet</h2>
       <div id="rectangleC" style="padding-top: 20px;">
         <form method="POST">
-        <input type="text" placeholder="Nom du projet" name="name" id="name" maxlength="25" class="box-black">
+        <input type="text" placeholder="Nom du projet" name="name" id="name" maxlength="25" class="box-black" required>
         <div class="lineblk"></div>
         <h5>Description du projet</h5>
-        <input type="text" placeholder="Thème, style" name="description" id="description" class="box-black">
+        <input type="text" placeholder="Thème, style" name="description" id="description" class="box-black" required>
         <div class="lineblk"></div>
           <div class="row">
             <h5 style="width: 200px;">Nombre de participants :</h5>
             <div>
-              <input type="number" name="no_participants" id="no_participants" min=1 max=3 class="box-black-big" style="margin-top: 20px; margin-right: auto;">
+              <input type="number" name="no_participants" id="no_participants" min=1 max=3 class="box-black-big" style="margin-top: 20px; margin-right: auto;" required>
             </div>
           </div>
         <div class="lineblk"></div>
         <h5 style="width: 190px;">Délai pour envoyer le projet :</h5>
-        <input type="date" name="deadline" id="deadline" class="box-black">
+        <input type="date" name="deadline" id="deadline" class="box-black" required>
         <div class="lineblk"></div>
         <h5>Format :</h5>
 
@@ -50,7 +50,7 @@
           <div class="column">
             <h5>couleur de l'arrière-plan :</h5>
             <label for="hexInput"></label>
-            <input type="text" id="hexInput" placeholder="#000000" class="box-black"> 
+            <input type="text" name="color" id="color" placeholder="#000000" class="box-black"> 
             <div class="error" id="errorMessage" style="color: black;"></div>
           </div>
           <div id="square"></div>
@@ -126,7 +126,7 @@
     
     aspectRatioSelect.addEventListener('change', updateContent);
  
-  const hexInput = document.getElementById('hexInput');
+  const color = document.getElementById('color');
   const square = document.getElementById('square'); 
   const errorMessage = document.getElementById('errorMessage');
 
@@ -135,7 +135,7 @@
     }
 
     function applyColor() {
-      const hexCode = hexInput.value.trim();
+      const hexCode = color.value.trim();
 
       if (isValidHex(hexCode)) {
         square.style.backgroundColor = hexCode;      
@@ -146,7 +146,7 @@
       }
     }
 
-    hexInput.addEventListener('keydown', (event) => {
+    color.addEventListener('keydown', (event) => {
   if (event.key === 'Enter') {
     event.preventDefault();
     applyColor();
