--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,10 +19,11 @@
             <ul id="header-nav-menu">
                     <li><a href="{{ url_for('artists.people') }}">artistes</a></li>
                     <li><a href="{{ url_for('gallery.artworks') }}">oeuvres</a></li>
+                {% if g.user %}                
                     <li><a href="{{ url_for('create.createproject') }}">créer un projet</a></li>
-                {% if g.user %}
-                    <li><a href="{{ url_for('projects.projects') }}">projets en progrès</a></li>
+                    <li><a href="{{ url_for('projects.projects') }}">projets en progrès</a></li>   
                 {% else %}
+                    <li><a href="{{ url_for('auth.login') }}">créer un projet</a></li>
                     <li><a href="{{ url_for('auth.register') }}">s'enregistrer</a>
                     <li><a href="{{ url_for('auth.login') }}">se connecter</a>
                 {% endif %}
